# sentiment-api

./: .gitignore  Procfile  app.py  main.py  pyproject.toml  requirements.txt  utils.py  vercel.json
server/: app.py
