[tool.poetry]
name = "sentiment-analisys"
version = "0.1.0"
description = ""
authors = ["bagussr <bagusssyamsu@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_analisys"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
tweepy = "^4.12.1"
pandas = "^1.5.2"
uvicorn = "^0.20.0"
textblob = "^0.17.1"
wordcloud = "^1.8.2.2"
gunicorn = "^20.1.0"
pipreqs = "^0.4.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
